# ml-api

./: .gitignore  Dockerfile  README.md  full-requirements.txt  pyproject.toml  requirements.txt
models/795372866782281646/: meta.yaml
models/795372866782281646/55d48ab460e0422996cfb4c16bba2cff/: meta.yaml
models/795372866782281646/55d48ab460e0422996cfb4c16bba2cff/metrics/: accuracy  f1  precision  training_accuracy_score  training_log_loss  training_score
models/795372866782281646/55d48ab460e0422996cfb4c16bba2cff/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
models/795372866782281646/ae5cfef58c494698b56cec130d7d6070/: meta.yaml
models/795372866782281646/ae5cfef58c494698b56cec130d7d6070/metrics/: accuracy  f1  precision  training_f1_score  training_log_loss  training_score
models/795372866782281646/ae5cfef58c494698b56cec130d7d6070/params/: pca  steps
models/795372866782281646/ae5cfef58c494698b56cec130d7d6070/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: iris.ipynb  use-a-model.ipynb
src/scripts/: train.py
src/service/adapters/: exceptions.py  repositories.py
src/service/config/: containers.py  logger.py  settings.py
src/service/domain/: objects.py
src/service/entrypoints/: api.py
src/service/entrypoints/routers/: routes.py
src/service/ports/: repositories.py
src/service/use_cases/: prediction.py
tests/: conftest.py  fakes.py
tests/domain/: test_objects.py
tests/entrypoints/: test_api.py
tests/use_cases/: test_prediction_use_case.py
(+15 files in other folders)
