[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Mateus Assis <mateus.d.assis.silva@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
scikit-learn = "^1.4.2"
mlflow = "^2.12.2"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ipykernel = "^6.29.4"


[tool.poetry.group.data.dependencies]
ucimlrepo = "^0.0.6"
pandas = "^2.2.2"
certifi = "^2024.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
